feat/Added get instrument by id endpoint
